--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -25,15 +25,27 @@
 		.sticky-top {
 			z-index: 1030 !important; /* Bootstrap usa 1000 per i dropdown, 1050+ per i modal. 1030 è un valore comune per le navbar fixed/sticky */
 		}
+
+
+		.navbar-nav .nav-item.logout {
+			position: absolute;
+			right: 0; /* Posiziona il link a destra */
+		}
 	</style>
 
 </head>
 <body>
 	<div class="bg-black pb-1">
 		<div class="d-flex flex-column">
+			<div class="d-flex justify-content-end mb-2 mt-1">
+				<!-- Pulsanti in alto a destra -->
+				<div class="d-flex gap-2 me-3">
+					<a href="#" class="btn btn-light btn-sm"><i class="bi bi-envelope"></i> Area Lavoro</a>
+				</div>
+			</div>
 			<div class="d-flex justify-content-between align-items-center flex-wrap mx-3">
 				<div>
-					<a href="#"><img src="/resources/logo.png" height="50px"></a>
+					<a asp-area="" asp-controller="Studenti" asp-action="Show"><img src="/resources/logo.png" height="50px"></a>
 				</div>
 
 				<div>
@@ -90,6 +102,10 @@
 							<li class="nav-item">
 								<a class="nav-link active" aria-current="page" href="#">Privacy</a>
 							</li>
+
+							<li class="nav-item me-3 logout">
+								<a class="nav-link active" aria-current="page" asp-controller="Logout" asp-action="Logout">Logout</a>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -126,7 +142,6 @@
 			</div>
 		</div>
 	</footer>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
