--- a/AreaStudente/wwwroot/css/show.css
+++ b/AreaStudente/wwwroot/css/show.css
@@ -593,12 +593,12 @@ textarea.form-control {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+    /*transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;*/
     text-align: center;
     vertical-align: middle;
     white-space: nowrap;
     border: 1px solid transparent;
-    border-radius: .375rem;
+    /*border-radius: .375rem;*/
 }
 
 @media screen and (prefers-reduced-motion: reduce) {
@@ -737,7 +737,7 @@ textarea.form-control {
     font-size: .875rem;
     line-height: 1.5;
     padding: .25rem .5rem;
-    border-radius: .375rem;
+    /*border-radius: .375rem;*/
 }
 
 /*.dropdown {
@@ -810,7 +810,7 @@ textarea.form-control {
         background-color: #f6f9fc;
     }*/
 
-    ./*dropdown-item:active {
+    /*dropdown-item:active {
         text-decoration: none;
         color: #fff;
         background-color: #5e72e4;
@@ -1503,10 +1503,10 @@ a.text-white:focus {
     will-change: transform;
 }
 
-    .btn:hover {
+    /*.btn:hover {
         transform: translateY(-1px);
         box-shadow: 0 7px 14px rgba(50, 50, 93, .1), 0 3px 6px rgba(0, 0, 0, .08);
-    }
+    }*/
 
     .btn:not(:last-child) {
         margin-right: .5rem;
@@ -1526,7 +1526,7 @@ a.text-white:focus {
 }
 
 .btn-sm {
-    font-size: .75rem;
+    font-size: 1rem;
 }
 
 [class*='btn-outline-'] {
