--- a/AreaStudente/Views/Studenti/Show.cshtml
+++ b/AreaStudente/Views/Studenti/Show.cshtml
@@ -34,7 +34,7 @@
 		@if (Model != null && Model.K_Studente != Guid.Empty)
 		{
 			<div class="row">
-			<!-- COLONNA SINISTRA: 2 card impilate -->
+				<!-- COLONNA SINISTRA: 2 card impilate -->
 				<div class="col-xl-4 order-xl-2">
 					<!-- PROFILO -->
 					<div class="card card-profile shadow mb-4">
@@ -68,126 +68,59 @@
 						</div>
 					</div>
 
-					<!-- COMUNICAZIONI -->
+					<!-- Riepilogo -->
 					<div class="card card-profile shadow">
 						<div class="row text-center">
-								<p class="fs-3">Le tue Comunicazioni</p>
+							<p class="fs-3">Riepilogo Profilo</p>
+							<span>@Model.Email</span>
 						</div>
-						<div class="p-4">
-						</div>
-						<div class="card-body pt-0 pt-md-4">
-							<div class="p-5">
-							</div>
+						<div class="card-body pt-0">
 							<div class="text-center">
 								<hr class="my-4">
+								<form>
+									<h6 class="heading-small text-muted mb-4">Informazioni di Immatricolazione</h6>
+									<div class="pl-lg-4">
+										<div class="row g-3">
+											<div class="col-md-6">
+												<div class="form-group focused">
+													<label class="form-control-label" for="input-matriculation-number">Matricola</label>
+													<input id="input-matriculation-number" class="form-control form-control-alternative" placeholder="Numero Matricola" value="@(Model?.Matricola?.ToString() ?? "N/A")" type="text" readonly>
+												</div>
+											</div>
+											<div class="col-md-6">
+												<div class="form-group focused">
+													<label class="form-control-label" for="input-date-matriculation">Data di Immatricolazione</label>
+													<input id="input-date-matriculation" class="form-control form-control-alternative" placeholder="Data di Immatricolazione" value="@(Model?.DataImmatricolazione?.ToString("dd/MM/yyyy") ?? "N/A")" type="text" readonly>
+												</div>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-md-6">
+												<div class="form-group focused">
+													<label class="form-control-label" for="input-enabled">Abilitato</label>
+													<input id="input-enabled" class="form-control form-control-alternative" placeholder="Abilitato" value="@(Model?.Abilitato ?? "N/A")" type="text" readonly>
+												</div>
+											</div>
+											<div class="col-md-6">
+												<div class="form-group focused">
+													<label class="form-control-label" for="input-course">Corso</label>
+													<input id="input-course" class="form-control form-control-alternative" placeholder="Corso" value="@(Model?.K_Corso?.ToString() ?? "N/A")" type="text" readonly>
+												</div>
+											</div>
+										</div>
+									</div>
+								</form>
 							</div>
 						</div>
 					</div>
 				</div>
-				
+
 				<!-- User -->
 				<div class="col-xl-8 order-xl-1">
 					<div class="card bg-secondary shadow">
 						<div class="card-body">
-							<form>
-								<h6 class="heading-small text-muted mb-4">Informazioni Personali</h6>
-								<div class="pl-lg-4">
-									<div class="row">
-										<div class="col-lg-6">
-											<div class="form-group focused">
-												<label class="form-control-label" for="input-last-name">Cognome</label>
-												<input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Cognome" value="@(Model?.Cognome ?? "N/A")" readonly>
-											</div>
-										</div>
-										<div class="col-lg-6">
-											<div class="form-group">
-												<label class="form-control-label" for="input-first-name">Nome</label>
-												<input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="Nome" value="@(Model?.Nome ?? "N/A")" readonly>
-											</div>
-										</div>
-									</div>
-									<div class="row">
-										<div class="col-lg-6">
-											<div class="form-group focused">
-												<label class="form-control-label" for="input-email">Indirizzo Email</label>
-												<input type="email" id="input-email" class="form-control form-control-alternative" placeholder="unigen@esempio.com" value="@(Model?.Email ?? "N/A")" readonly>
-											</div>
-										</div>
-										<div class="col-lg-6">
-											<div class="form-group focused">
-												<label class="form-control-label" for="input-date">Data di Nascita</label>
-												<input type="text" id="input-date" class="form-control form-control-alternative" placeholder="Data di Nascita" value="@(Model?.DataNascita?.ToString("dd/MM/yyyy") ?? "N/A")" readonly>
-											</div>
-										</div>
-									</div>
-								</div>
-								<hr class="my-4">
-								<!-- Address -->
-								<h6 class="heading-small text-muted mb-4">Informazioni di Contatto</h6>
-								<div class="pl-lg-4">
-									<div class="row">
-										<div class="col-md-8">
-											<div class="form-group focused">
-												<label class="form-control-label" for="input-address">Indirizzo</label>
-												<input id="input-address" class="form-control form-control-alternative" placeholder="Indirizzo domicilio" value="@(Model?.Indirizzo ?? "N/A")" type="text" readonly>
-											</div>
-										</div>
-										<div class="col-md-4">
-											<div class="form-group">
-												<label class="form-control-label" for="input-postal-code">CAP</label>
-												<input type="text" id="input-postal-code" class="form-control form-control-alternative" placeholder="CAP" value="@(Model?.CAP ?? "N/A")" readonly>
-											</div>
-										</div>
-									</div>
-									<div class="row">
-										<div class="col-md-6">
-											<div class="form-group focused">
-												<label class="form-control-label" for="input-city">Città</label>
-												<input type="text" id="input-city" class="form-control form-control-alternative" placeholder="Città" value="@(Model?.Citta ?? "N/A")" readonly>
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group focused">
-												<label class="form-control-label" for="input-country">Provincia</label>
-												<input type="text" id="input-country" class="form-control form-control-alternative" placeholder="Provincia" value="@(Model?.Provincia ?? "N/A")" readonly>
-											</div>
-										</div>
-									</div>
-								</div>
-								<hr class="my-4">
-								<!-- Description -->
-								<h6 class="heading-small text-muted mb-4">Informazioni di Immatricolazione</h6>
-								<div class="pl-lg-4">
-									<div class="row">
-										<div class="col-md-4">
-											<div class="form-group focused">
-												<label class="form-control-label" for="input-matriculation-number">Matricola</label>
-												<input id="input-matriculation-number" class="form-control form-control-alternative" placeholder="Numero Matricola" value="@(Model?.Matricola?.ToString() ?? "N/A")" type="text" readonly>
-											</div>
-										</div>
-										<div class="col-md-4">
-											<div class="form-group focused">
-												<label class="form-control-label" for="input-date-matriculation">Data di Immatricolazione</label>
-												<input id="input-date-matriculation" class="form-control form-control-alternative" placeholder="Data di Immatricolazione" value="@(Model?.DataImmatricolazione?.ToString("dd/MM/yyyy") ?? "N/A")" type="text" readonly>
-											</div>
-										</div>
-									</div>
-									<div class="row">
-										<div class="col-md-4">
-											<div class="form-group focused">
-												<label class="form-control-label" for="input-enabled">Abilitato</label>
-												<input id="input-enabled" class="form-control form-control-alternative" placeholder="Abilitato" value="@(Model?.Abilitato ?? "N/A")" type="text" readonly>
-											</div>
-										</div>
-										<div class="col-md-4">
-											<div class="form-group focused">
-												<label class="form-control-label" for="input-course">Corso</label>
-												<input id="input-course" class="form-control form-control-alternative" placeholder="Corso" value="@(Model?.K_Corso?.ToString() ?? "N/A")" type="text" readonly>
-											</div>
-										</div>
-									</div>
-								</div>
-							</form>
+							<h1>LE TUE COMUNICAZIONI</h1>
+							<hr class="my-4">
 						</div>
 					</div>
 				</div>
