--- a/AreaDocente/Views/Shared/_Layout.cshtml
+++ b/AreaDocente/Views/Shared/_Layout.cshtml
@@ -22,25 +22,29 @@
         .dropdown-menu > li:hover > .dropdown-submenu {
             display: block;
         }
+
+        .flex-wrapper {
+            display: flex;
+            min-height: 100vh;
+            flex-direction: column;
+            justify-content: space-between;
+        }
     </style>
 
 </head>
-<body class="m-0">
+<body class="m-0 flex-wrapper">
     <header class="mb-5">
         <div class="fixed-top">
             <nav class="navbar navbar-dark navbar-expand-lg navbar-custom">
                 <div class="container">
+                    <a class="navbar-brand" href="#">
+                        <img src="~/css/resources/logonobg.png" alt="Bootstrap" width="150">
+                    </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-                            <li>
-                            <a class="navbar-brand" href="#">
-                                <img src="~/css/resources/logonobg.png" alt="Bootstrap" width="150">
-                            </a>
-                            </li>
 
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
