--- a/AreaAmministrazione/MasterPage.master
+++ b/AreaAmministrazione/MasterPage.master
@@ -59,9 +59,9 @@
                 </div>
                 <h5 class="text-center">Menu</h5>
                 <a href="Home.aspx"><i class="bi bi-house-door-fill me-2"></i>Dashboard</a>
-                <a href="#"><i class="bi bi-person-check-fill me-2"></i>Gestione studente</a>
-                <a href="Gestione_Facolta.aspx"><i class="bi bi-mortarboard-fill me-2"></i>Gestione facoltà</a>
-                <a href="#"><i class="bi bi-clipboard2 me-2"></i>Gestione corsi</a>
+                <a href="#"><i class="bi bi-person-check-fill me-2"></i>Gestione Studente</a>
+                <a href="Gestione_Facolta.aspx"><i class="bi bi-mortarboard-fill me-2"></i>Gestione Facoltà</a>
+                <a href="#"><i class="bi bi-clipboard2 me-2"></i>Gestione Corsi</a>
                 <a href="Gestione_PianoStudi.aspx"><i class="bi bi-book me-2"></i>Gestione Piano Studi</a>
                 <a href="#"><i class="bi bi-people-fill me-2"></i>Gestione Docenti</a>
 
