--- a/AreaPubblica/Views/Shared/_Layout.cshtml
+++ b/AreaPubblica/Views/Shared/_Layout.cshtml
@@ -87,7 +87,7 @@
                                 </ul>
 
                             <li class="nav-item">
-                                <a class="nav-link active" asp-area="" asp-controller="Contatti" asp-action="Contatti">Come Funziona</a>
+                                <a class="nav-link active" asp-area="" asp-controller="Contatti" asp-action="Index">Come Funziona</a>
                             </li>
 
                             <li class="nav-item">
