--- a/Comunicazioni/Views/Comunicazioni/List.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/List.cshtml
@@ -3,92 +3,97 @@
 *@
 @model List<IGrouping<Guid, Comunicazioni.Models.Entities.Comunicazione>>
 
-<h1>Comunicazioni</h1>
-<div class="row gx-5">
-	<div class="col-9">
-		<table class="table">
-			<thead>
-				<tr>
-					<th>Ruolo Mittente</th>
-					<th>Comunicazione</th>
-				</tr>
-			</thead>
-			<tbody>
-				@foreach (var gruppo in Model)
-				{
+<div class="container">
+
+
+	<h1>Comunicazioni</h1>
+	<div class="row gx-5">
+		<div class="col-9">
+			<table class="table">
+				<thead>
 					<tr>
-						<td>
-							@gruppo.First().Soggetto
-						</td>
-						<td>
-							<div class="accordion" id="accordionExample">
-								<div class="accordion-item">
-									<h2 class="accordion-header">
-										<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_@gruppo.Key" aria-expanded="true" aria-controls="collapse_@gruppo.Key">
-											Comunicazione numero: @gruppo.Key
-											@*  .Key è in comando Linq per indicare la chiavbe usata per il group by  *@
-										</button>
-									</h2>
-									<div id="collapse_@gruppo.Key" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-										<div class="accordion-body">
-											<div class="col-md-6 col-lg-7 col-xl-8">
-												<ul class="list-unstyled">
-													@{
-														var ruolo = Context.Session.GetString("ruolo");
-													}
-													@foreach (var comunicazione in gruppo.OrderBy(c => c.DataOraComunicazione))
-													{
-														<li class="d-flex justify-content-between mb-4">
-															<div class="card">
-																<div class="card-header d-flex justify-content-between p-3">
-																	<div class="d-flex justify-content-between align-items-baseline">
-																		<p class="fw-bold mb-0">
-																			@if (comunicazione.Studente != null && comunicazione.Studente.K_Studente == comunicazione.K_Soggetto)
-																			{
-																				<span class="text-primary">@($"{comunicazione.Studente.Nome} {comunicazione.Studente.Cognome} - {comunicazione.Soggetto}")</span>
-																			}
-																			else if (comunicazione.Docente != null && comunicazione.Docente.K_Docente == comunicazione.K_Soggetto)
-																			{
-																				<span class="text-danger">@($"{comunicazione.Docente.Nome} {comunicazione.Docente.Cognome} - {comunicazione.Soggetto}")</span>
-																			}
-																			else if (comunicazione.Studente == null && comunicazione.Docente == null)
-																			{
-																				<span class="text-success">Amministrazione</span>
-																			}
+						<th>Ruolo Mittente</th>
+						<th>Comunicazione</th>
+					</tr>
+				</thead>
+				<tbody>
+					@foreach (var gruppo in Model)
+					{
+						<tr>
+							<td>
+								@gruppo.First().Soggetto
+							</td>
+							<td>
+								<div class="accordion" id="accordionExample">
+									<div class="accordion-item">
+										<h2 class="accordion-header">
+											<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_@gruppo.Key" aria-expanded="true" aria-controls="collapse_@gruppo.Key">
+												Comunicazione numero: @gruppo.Key
+												@*  .Key è in comando Linq per indicare la chiavbe usata per il group by  *@
+											</button>
+										</h2>
+										<div id="collapse_@gruppo.Key" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+											<div class="accordion-body">
+												<div class="col-md-6 col-lg-7 col-xl-8">
+													<ul class="list-unstyled">
+														@{
+															var ruolo = Context.Session.GetString("ruolo");
+														}
+														@foreach (var comunicazione in gruppo.OrderBy(c => c.DataOraComunicazione))
+														{
+															<li class="d-flex justify-content-between mb-4">
+																<div class="card">
+																	<div class="card-header d-flex justify-content-between p-3">
+																		<div class="d-flex justify-content-between align-items-baseline">
+																			<p class="fw-bold mb-0">
+																				@if (comunicazione.Studente != null && comunicazione.Studente.K_Studente == comunicazione.K_Soggetto)
+																				{
+																					<span class="text-primary">@($"{comunicazione.Studente.Nome} {comunicazione.Studente.Cognome} - {comunicazione.Soggetto}")</span>
+																				}
+																				else if (comunicazione.Docente != null && comunicazione.Docente.K_Docente == comunicazione.K_Soggetto)
+																				{
+																					<span class="text-danger">@($"{comunicazione.Docente.Nome} {comunicazione.Docente.Cognome} - {comunicazione.Soggetto}")</span>
+																				}
+																				else if (comunicazione.Studente == null && comunicazione.Docente == null)
+																				{
+																					<span class="text-success">Amministrazione</span>
+																				}
+																			</p>
+																			<span class="px-2"></span>
+																			<p class="text-muted small mb-0"><i class="far fa-clock"></i>@comunicazione.DataOraComunicazione</p>
+																		</div>
+																	</div>
+																	<div class="card-body">
+																		<p class="mb-0">
+																			@comunicazione.Testo
 																		</p>
-																		<span class="px-2"></span>
-																		<p class="text-muted small mb-0"><i class="far fa-clock"></i>@comunicazione.DataOraComunicazione</p>
 																	</div>
 																</div>
-																<div class="card-body">
-																	<p class="mb-0">
-																		@comunicazione.Testo
-																	</p>
+															</li>
+														}
+														<li class="bg-white">
+															<form method="post" asp-action="AddRisposta">
+																<input type="hidden" name="Codice_Comunicazione" value="@gruppo.Key" />
+																<div data-mdb-input-init class="form-outline">
+																	<textarea class="form-control bg-body-tertiary" id="textAreaExample2" rows="4" name="Testo"></textarea>
+																	<label class="form-label" for="textAreaExample2">Message</label>
 																</div>
-															</div>
+																<button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-info btn-rounded float-end p-0 px-2">Send</button>
+															</form>
 														</li>
-													}
-													<li class="bg-white">
-														<form method="post" asp-action="AddRisposta">
-															<input type="hidden" name="Codice_Comunicazione" value="@gruppo.Key" />
-															<div data-mdb-input-init class="form-outline">
-																<textarea class="form-control bg-body-tertiary" id="textAreaExample2" rows="4" name="Testo"></textarea>
-																<label class="form-label" for="textAreaExample2">Message</label>
-															</div>
-															<button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-info btn-rounded float-end p-0 px-2">Send</button>
-														</form>
-													</li>
-												</ul>
+													</ul>
+												</div>
 											</div>
 										</div>
 									</div>
 								</div>
-							</div>
-						</td>
-					</tr>
-				}
-			</tbody>
-		</table>
+							</td>
+						</tr>
+					}
+				</tbody>
+			</table>
+		</div>
+		<div class="col-3 shadow p-3 bg-body-tertiary rounded">In questa pagina </div>
 	</div>
-	<div class="col-3 shadow p-3 bg-body-tertiary rounded">In questa pagina </div>
+
 </div>
