--- a/AreaStudente/Views/Studenti/ModificaProfilo.cshtml
+++ b/AreaStudente/Views/Studenti/ModificaProfilo.cshtml
@@ -45,7 +45,6 @@
 				<h4 class="heading-small text-muted">USER</h4>
 				<div class="row mb-0 mb-lg-3 align-items-end">
 					<div class="col-12 col-lg-9 mb-2 mb-lg-0">
-						<label class="form-label form-control-label">E-Mail:</label>
 						<label class="form-label form-control-label">E-Mail</label>
 						<input type="email" asp-for="Email" class="form-control form-control-alternative" readonly />
 					</div>
@@ -63,19 +62,17 @@
 							</div>
 							<div class="modal-body">
 								<div class="mb-2 ">
-									<label class="form-label form-control-label">Inserisci la Vecchia Password:</label>
+
 
 									<label class="form-label form-control-label">Inserisci la Vecchia Password</label>
 									<input type="password" asp-for="PWD" class="form-control form-control-alternative" />
 
 								</div>
 								<div class="mb-2 ">
-									<label class="form-label form-control-label">Nuova Password:</label>
 									<label class="form-label form-control-label">Nuova Password</label>
 									<input type="password" name="PasswordNew" class="form-control form-control-alternative" />
 								</div>
 								<div class="mb-4">
-									<label class="form-label form-control-label">Conferma Nuova Password:</label>
 									<label class="form-label form-control-label">Conferma Nuova Password</label>
 									<input type="password" name="PasswordConfirm" class="form-control form-control-alternative" />
 								</div>
@@ -107,17 +104,14 @@
 				<h4 class="heading-small text-muted">Dati Anagrafici</h4>
 				<div class="row mb-0 mb-lg-3">
 					<div class="col-12 col-lg-4 mb-2 mb-lg-0">
-						<label class="form-label form-control-label">Cognome:</label>
 						<label class="form-label form-control-label">Cognome</label>
 						<input type="text" asp-for="Cognome" class="form-control form-control-alternative" required />
 					</div>
 					<div class="col-12 col-lg-4 mb-2">
-						<label class="form-label form-control-label">Nome:</label>
 						<label class="form-label form-control-label">Nome</label>
 						<input type="text" asp-for="Nome" class="form-control form-control-alternative" required />
 					</div>
 					<div class="col-12 col-lg-4 mb-2">
-						<label class="form-label form-control-label">Data di Nascita:</label>
 						<label class="form-label form-control-label">Data di Nascita</label>
 						<input type="date" asp-for="DataNascita" class="form-control form-control-alternative" required />
 					</div>
@@ -128,12 +122,10 @@
 				<h4 class="heading-small text-muted mt-0">Informazioni di contatto</h4>
 				<div class="row mb-0 mb-lg-3">
 					<div class="col-12 col-lg-9 mb-2 mb-lg-0">
-						<label class="form-label form-control-label">Indirizzo:</label>
 						<label class="form-label form-control-label">Indirizzo</label>
 						<input type="text" asp-for="Indirizzo" class="form-control form-control-alternative" required />
 					</div>
 					<div class="col-12 col-lg-3 mb-2 mb-lg-0">
-						<label class="form-label form-control-label">CAP:</label>
 						<label class="form-label form-control-label">CAP</label>
 						<input type="text" asp-for="CAP" class="form-control form-control-alternative" maxlength="5" required />
 					</div>
@@ -141,12 +133,10 @@
 
 				<div class="row mb-0 mb-lg-3">
 					<div class="col-12 col-lg-9 mb-2 mb-lg-0">
-						<label class="form-label form-control-label">Città:</label>
 						<label class="form-label form-control-label">Città</label>
 						<input type="text" asp-for="Citta" class="form-control form-control-alternative" required />
 					</div>
 					<div class="col-12 col-lg-3 mb-2 mb-lg-0">
-						<label class="form-label form-control-label">Provincia:</label>
 						<label class="form-label form-control-label">Provincia</label>
 						<input type="text" asp-for="Provincia" class="form-control text-uppercase form-control-alternative" maxlength="2" required />
 					</div>
@@ -157,6 +147,7 @@
 			</div>
 
 		
+				<div class="col-12 col-xl-4 mt-5 mt-lg-0 px-0 px-lg-2">
 					<div class="bg-white border border-1 border-black shadow rounded-5 p-4 position-relative">
 
 						@{
@@ -193,6 +184,7 @@
 
 						<div class="input-group mt-5">
 							<input type="file" class="form-control" asp-for="ImmagineProfiloFile" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload" />
+							<button type="submit" class="btn btn-primary">Salva</button>
 						</div>
 
 					</div>
