--- a/AreaDocente/Views/Lezioni/Add.cshtml
+++ b/AreaDocente/Views/Lezioni/Add.cshtml
@@ -1,38 +1,38 @@
 ﻿@model AreaDocente.Models.AddLezioniViewModel
 
-<h1>Inserimento nuova lezione</h1>
+<div class="container mt-5">
+    <h1 class="text-center mb-4">Inserimento Nuova Lezione</h1>
 
-<form method="post">
+    <div class="card p-4 shadow-sm">
+        <form method="post">
 
-	@* LEZIONE *@
-	<div class="mt-3">
-		<label id="lblLezione" class="form-label">Titolo</label>
-		<input type="text" class="form-control" asp-for="Titolo" />
-	</div>
-	<div class="mt-3">
-		<label id="lblVideo" class="form-label">Video</label>
-		<input type="text" class="form-control" asp-for="Video" />
-	</div>
+            <div class="mt-3">
+                <label id="lblLezione" class="form-label">Titolo</label>
+                <input type="text" class="form-control" asp-for="Titolo" placeholder="Inserisci il titolo della lezione" />
+            </div>
+            <div class="mt-3">
+                <label id="lblVideo" class="form-label">Video</label>
+                <input type="text" class="form-control" asp-for="Video" placeholder="Inserisci il link del video" />
+            </div>
 
-	@* BTN SALVA *@
-	<div class="mt-3">
-		<button type="submit" class="btn btn-primary">Salva</button>
-	</div>
+            <div class="mt-4">
+                <button type="submit" class="btn btn-primary btn-lg w-100">Salva</button>
+            </div>
+        </form>
+    </div>
 
-</form>
+    @section Scripts {
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-@* JS *@
-@section Scripts {
-	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-	@if (TempData["ErrorMessage"] != null)
-	{
-		<script>
-			Swal.fire({
-				icon: 'error',
-				title: 'Operazione non riuscita',
-				text: '@TempData["ErrorMessage"]'
-			});
-		</script>
-	}
-}
+        @if (TempData["ErrorMessage"] != null)
+        {
+            <script>
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Operazione non riuscita',
+                    text: '@TempData["ErrorMessage"]'
+                });
+            </script>
+        }
+    }
+</div>
