--- a/AreaPubblica/Views/Shared/_Layout.cshtml
+++ b/AreaPubblica/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="#">Home</a>
+								<a class="nav-link active" asp-controller="Home" asp-action="Index">Home</a>
 							</li>
 
 							<li class="nav-item dropdown">
@@ -97,7 +97,7 @@
 								</ul>
 
 							<li class="nav-item">
-								<a class="nav-link active" asp-area="" asp-controller="Contatti" asp-action="Index">Come Funziona</a>
+								<a class="nav-link active" asp-area="" asp-controller="Contatti" asp-action="Index">Contatti</a>
 							</li>
 
 							<li class="nav-item">
