--- a/AreaDocente/Views/Lezioni/Add.cshtml
+++ b/AreaDocente/Views/Lezioni/Add.cshtml
@@ -6,10 +6,19 @@
     <div class="card p-4 shadow-sm">
         <form method="post">
 
+
+            <div class="mt-3">
+                <label class="form-label">Esami</label>
+                <select asp-for="K_Esame" asp-items="@ViewBag.EsamiDDl" class="form-select" placeholder="Inserisci il titolo della lezione">
+                    <option disabled selected>Seleziona un esame</option>
+                </select>
+            </div>
+
             <div class="mt-3">
                 <label id="lblLezione" class="form-label">Titolo</label>
                 <input type="text" class="form-control" asp-for="Titolo" placeholder="Inserisci il titolo della lezione" />
             </div>
+
             <div class="mt-3">
                 <label id="lblVideo" class="form-label">Video</label>
                 <input type="text" class="form-control" asp-for="Video" placeholder="Inserisci il link del video" />
