--- a/AreaDocente/Views/Lezioni/Edit.cshtml
+++ b/AreaDocente/Views/Lezioni/Edit.cshtml
@@ -20,6 +20,13 @@
                 </div>
 
                 <div class="mt-3">
+                    <label class="form-label">Esami</label>
+                    <select asp-for="K_Esame" asp-items="@ViewBag.EsamiDDL" class="form-control">
+                        <option disabled selected>Selezionare un esame</option>
+                    </select>
+                </div>
+
+                <div class="mt-3">
                     <label class="form-label">Titolo</label>
                     <input type="text" class="form-control" asp-for="Titolo" />
                 </div>
