--- a/AreaDocente/Views/Lezioni/List.cshtml
+++ b/AreaDocente/Views/Lezioni/List.cshtml
@@ -13,6 +13,7 @@
         <thead class="table-dark">
             <tr>
                 <th class="th">K</th>
+                <th>Esami</th>
                 <th>Lezioni</th>
                 <th>Video</th>
                 <th>Azioni</th>
@@ -23,6 +24,7 @@
             {
                 <tr>
                     <td class="th">@lezioni.K_Lezione</td>
+                    <td>@Html.DisplayFor(Model => lezioni.Esame.TitoloEsame)</td>
                     <td>@lezioni.Titolo</td>
                     <td>@lezioni.Video</td>
                     <td>
